= natour Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog^], and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning^].

== Unreleased

== 0.7.0 - 2022-02-14

=== Added

- Add support for Ruby 3.0 and 3.1.
- Support species lists from https://www.birdlife.ch/de/content/eine-neue-moderne-vogel-app-fuer-die-schweiz[Vogelführer Birdlife Schweiz^].

=== Changed

- Return the filenames from `Natour::create` and `Natour::convert`.

=== Removed

- Drop support for Ruby 2.5.

=== Fixed

- Add revision date to the AsciiDoc output regardless of the author.
- Prevent conversion from being aborted if a built-in date/time attribute is missing.

== 0.6.0 - 2021-11-20

=== Fixed

- Support GPX files containing only mandatory elements (i.e. no extensions).
- Consider also the image dimensions to determine the orientation, even if the tag is present.

== 0.5.0 - 2021-08-16

=== Added

- Reflect the date of the last update in the revision date.
- Add captions to species lists in the AsciiDoc output.
- Group species lists by taxonomic groups in the AsciiDoc output.

=== Fixed

- Support species lists of https://www.flora-helvetica.ch/[Flora Helvetica^] exported from _Favoriten_.
- Consider botanical names with the authority name preceding the subspecies.

== 0.4.0 - 2021-05-02

=== Added

- Show date/time of images in draft output.
- Support preferred conversion backend for draft output.

=== Removed

- Remove redundant method `Natour::Image.portrait?`.
+
IMPORTANT: This is a breaking change. Use `Natour::Image.landscape?` instead.

== 0.3.0 - 2021-03-07

=== Changed

- Sort the reports according to their GPS track.
- Bump minimum required Ruby version to 2.5.
- Change font in PDF output to support ♀ and ♂ symbols.

=== Fixed

- Make source code compatible with Ruby 2.5.

== 0.2.0 - 2021-01-24

=== Added
