@@ -3,8 +3,8 @@ require_relative 'natour/utils/date_utils'
 require_relative 'natour/utils/stdout_utils'
 require_relative 'natour/asciinurse'
 require_relative 'natour/config'
-require_relative 'natour/convert'
-require_relative 'natour/create'
+require_relative 'natour/convert_report'
+require_relative 'natour/create_reports'
 require_relative 'natour/gps_track'
 require_relative 'natour/gps_track_point'
 require_relative 'natour/gpx_file'
