@@ -8,8 +8,8 @@ require 'vips'
 module Natour
   module_function
 
-  def convert(filename, out_dir: nil, out_file: nil, overwrite: false,
-              backend: 'pdf', draft: false, draft_backend: nil, image_maxdim: 16000)
+  def convert_report(filename, out_dir: nil, out_file: nil, overwrite: false,
+                     backend: 'pdf', draft: false, draft_backend: nil, image_maxdim: 16000)
     backend = if draft
                 draft_backend || backend
               else
